--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "color_blame"]
 	path = color_blame
-	url = git@github.com:kyokley/color_blame.git
+	url = https://github.com/kyokley/color_blame.git
